istiofiles/authorization/authorization-policy-allow-customer.yaml
apiVersion: "security.istio.io/v1beta1"
kind: "AuthorizationPolicy"
metadata:
  name: "customer-viewer"
spec:
  selector:
    matchLabels:
      app: customer
  rules:
  - to:
    - operation:
        methods: ["GET"]
